{
    "name": "SxswAvatarControl",
    "maps": [
        {
            "name": "Sxsw-demo-action",
            "id": "3c575360-2129-4bb6-b3de-5d267dfd37f4",
            "actions": [
                {
                    "name": "Cam_XY",
                    "type": "Value",
                    "id": "ed1697a0-1d15-4dd7-ad02-fd87590b56c8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandsUp",
                    "type": "PassThrough",
                    "id": "0b7e799f-6c22-417c-89e6-dd4d80a396a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Clap",
                    "type": "PassThrough",
                    "id": "71e51882-23ca-410d-8afd-a3c16552d2dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point_L",
                    "type": "Button",
                    "id": "e8e3411f-ea2f-4b49-a299-4ae8d3401ed4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point_R",
                    "type": "Button",
                    "id": "9684676b-2c15-4b01-9d09-549994887c4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn_L",
                    "type": "Button",
                    "id": "6bd0c681-385b-4523-8a78-0e607b45f46e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn_R",
                    "type": "Button",
                    "id": "00534b2d-3405-4f3f-9a5e-bee626cc6ae7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "27c8876e-de5e-4e33-a325-26f48c050480",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Go_Forword",
                    "type": "PassThrough",
                    "id": "329a2b79-94a4-4aa1-8c29-e19ce2f213db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ef0a8eb2-39e2-4919-919b-c82638542f75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector_osc",
                    "id": "76b69f38-7a7f-496b-8a51-d67ee17729dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c733d9df-c0f7-4b7e-8c44-5a853186eb59",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "68c25e85-b6c7-4715-843a-0ce515ce18c8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6d4caf79-84c1-4e8a-9d25-52aae3f4f7b7",
                    "path": "<OscDevice>/A",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e9310947-281f-4716-b97a-6847abc8611c",
                    "path": "<OscDevice>/B",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector_key",
                    "id": "6f159a9a-fa5f-4817-bf7c-bda8cb33f651",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dd30c980-0c4d-4b67-82f9-055796547ae4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "86adec33-e841-4485-9262-dfb7f81296d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "67d79c4c-13a5-438b-9f50-17c7b7630716",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b682a390-cf4c-49dd-9cc7-790aa6d7b6ad",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector_pad",
                    "id": "141f20cb-a503-42f2-a5f3-eab3bb568923",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "587db723-db12-49f4-84d2-7ba4747954c8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ec427ddc-acd5-474e-9448-3cba5e27776d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2b7e3baf-9bf7-4060-8534-a1b043b8dfea",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7a75a196-f7d9-4101-b2d3-c0ddd85ee06b",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cam_XY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "94308379-fc7a-4096-bfa3-763aa6f5ce40",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2319ffd4-1bac-4b06-84fe-afe9e19999bd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5a1e9db-8e77-40f6-828c-d36bd5918ff7",
                    "path": "<OscDevice>/C",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_Forword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "01b3b369-11de-4786-ad12-7d604b6efe35",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_Forword",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "ce960478-fc29-4387-a4aa-47268742f92a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_Forword",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e750bcf5-274b-44d7-8cba-41f6dbdaf80f",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_Forword",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ec355966-3fd6-4762-981f-3ef1143c5a6d",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Go_Forword",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66a7d7f4-dde9-446e-b35d-05b8a7368ebe",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandsUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c83fbc5-d69a-4b02-8187-79a0aea2a609",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8eb5ab42-4c0f-4c28-a7cc-6910ec3e7712",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn_L",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "739bef7d-d46d-4e3a-90f3-3f4fd207066b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1579250-c8ab-4d57-9985-9d2295f26f20",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a83a9d9a-1181-42d2-9cb1-8f4486d76da1",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}